# enterprise-rag-challenge

./: .gitignore  LICENSE  README.md  assistant_manager.py  gen_seed.py  get_random.py  ibm_watsonx_readme.md  main.py  pyproject.toml  question-gen.py  questions.json  rank.py  subset.csv
results/: open_ai_a1.json  open_ai_a3.json  source_of_thruth.json
round1/: README.MD  answers.csv  answers.json  bot_NA.json  dataset.csv  gen_seed.py  rank.py  rank_legacy_round1.py  scores.csv  scores.numbers  submissions.csv  teams.py
round1/answers/: A_Ovsov_M_Startseva_JustAI_2.json  Artem_checklist_plus.json  Artem_multi_stage_checklist.json  F-team.json  Neuraldeep-tech.json  Ox1d.json  aimpresario_team.json  anonymous1256.json  anonymous_1447.json
round1/submissions/: AlBo.json  Ilya_Rice.json  anonymous_1337.json  anonymous_1652.json
round2/: README.md  answers.json  questions.json  ranking.csv  subset.json
round2/experiments/: questions.json
round2/submissions/: submission_00c0e19c.json  submission_01c7a0ec.json  submission_03e27c96.json  submission_044b11f8.json  submission_05875085.json  submission_0e6d7552.json  submission_1.json  submission_10.json  submission_100.json  submission_101.json  submission_102.json  submission_103.json  submission_104.json  submission_105.json  submission_106.json  submission_107.json  (+248 more)
round2_test/: README.md  answers.csv  answers.json  questions.json  scores.csv  subset.json  teams.csv
samples/: _questions.md  answers_20240823_005903.json
src/: assistant_manager.py  evaluate.py  open_ai_rag.py  open_ai_responser.py
(+5 files in other folders)
