[tool.poetry]
name = "enterprise-rag-challenge"
version = "0.1.0"
description = ""
authors = ["Aleksandr Bobrov <al.bobrov.mail@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
openai = "^1.42.0"
click = "^8.1.7"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
